Added text to about.hbs

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,10 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>
+            This page was created by CASPER.<br>
+            The data here is take from mapbox.com and darksky.net.
+        </p>
     </div>
     
     {{>footer}}
